UX: fix text alignment assign modal dropdown (#422)

--- a/assets/stylesheets/assigns.scss
+++ b/assets/stylesheets/assigns.scss
@@ -86,6 +86,14 @@
     .caret-icon {
       color: var(--primary-medium);
     }
+
+    .name {
+      display: contents;
+    }
+
+    .identifier {
+      margin-right: 0.5rem;
+    }
   }
 
   .control-group.assignee-error {
